--- a/components/chart/templates/service.yaml
+++ b/components/chart/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.container.name }}-service
+  name: "{{ .Values.container.name }}-service"
   labels:
     env: dev
   namespace: default
